# rar-to-zip

./: .gitignore  Cargo.toml  Leptos.toml  README.md  Trunk.toml  index.html  package.json
.github/workflows/: deploy.yml
src/: converter.rs  lib.rs  main.rs  utils.rs
src/components/: mod.rs
